[package]
authors = ["Automata Team"]
description = 'FRAME pallet for defining attestor related logic.'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'pallet-accounting'
repository = "https://github.com/automata-network/automata"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
sp-std = {version  = "3.0.0", default-features = false }

automata-runtime-traits = { path = "../../runtime/traits", default-features = false}

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-balances = { version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'automata-runtime-traits/std',
]
