[package]
authors = ["Automata Team"]
description = 'FRAME pallet for defining attestor related logic.'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'pallet-attestor'
repository = "https://github.com/automata-network/automata"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
frame-support = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-std = {git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-runtime = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-core = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

# local dependencies
primitives = { package = "automata-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { default-features = false, git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

pallet-balances = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

[features]
default = ['std', 'full_crypto']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-core/std',
]
runtime-benchmarks = ['frame-benchmarking']
full_crypto = [
	'sp-core/full_crypto',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
