[package]
name = 'pallet-bridgetransfer'
version = '0.0.1'
authors = ['david@chainsafe.io']
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-arithmetic = { version = "3.0.0", default-features = false }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

pallet-bridge = { path = "../bridge", default-features = false}
hex = { version = "0.4", default-features = false }

[dev-dependencies]
pallet-balances = { version = "3.0.0", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner" }
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bridge/std"
]