[package]
authors = ['Automata Team']
edition = '2018'
name = 'pallet-fulfillment'
version = '0.1.0'
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde_json = { version = "1", optional = true }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }

frame-support = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
frame-system = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-std = {git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
sp-runtime = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10', default-features = false }
pallet-stake = { version = "0.1.0", default-features = false, path = '../stake' }

[dev-dependencies]
sp-io = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
pallet-balances = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }
sp-core = { git = 'https://github.com/automata-network/substrate.git', branch = 'polkadot-v0.9.10' }

[features]
default = ['std']
std = [
    'serde',
    'serde_json',
    'sp-std/std',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-stake/std',
]