[package]
authors = ["Automata Team"]
build = 'build.rs'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'pallet-geode'
repository = "https://github.com/automata-network/automata"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = {version  = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
runtime-benchmarks = ['frame-benchmarking']
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
