[package]
authors = ["Automata Team"]
description = 'FRAME pallet for defining service related logic.'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'pallet-service'
repository = "https://github.com/automata-network/automata"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde_json = { version = "1", optional = true }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { version  = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sha2 = { version = "0.9.5", default-features = false }

# local dependencies
primitives = { package = "automata-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-runtime/std',
	'serde',
	'serde_json',
	'sp-core/std',
	'sha2/std'
]